# tinyvla

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/truth_harness/: deployable_multiview_seed0_corrected_2026-07-11.json  deployable_multiview_seed0_short_2026-07-11.json  deployable_overfit_ladder_2026-07-11T1640.json  (+1 more)
configs/: command0_dataset_release_v1.json  smolvla_base_provenance.json
docs/: deployable_controller.md  h100_recipe.md  h200_runbook.md  interview_project.md  overfit_diagnosis.md  smolvla_teacher_command0.md  truth_harness.md
examples/: _bootstrap.py  benchmark.py  collect.py  dataset_viewer.py  eval.py  server.py  so101_env.py  so101_task.py  train.py
scripts/: audit_smolvla_dataset.py  baseline_mlp.py  benchmark_report.py  canonical_dagger_round1.py  cnn_dagger_probe.py  controlled_dagger_cnn.py  controlled_dagger_mlp.py  deployable_controller.py  device_check.py  diagnose_overfit.py  diagnose_release.py  diagnose_supervised_gate.py  fixed_tuple_lr_diagnostic.py  frozen_probe.py  gen_dataset.py  h100_dataset_fetch.sh  h200_bootstrap_launch.sh  h200_smolvla_teacher_command0.sh  h200_step_b.sh  h200_step_c.sh  h200_unfreeze.sh  hybrid_rollout.py  markovity.py  mirror_dagger_shards.sh  observation_audit.py  perturbation_recovery.py  prune_smolvla.py  prune_smolvla_layers.py  recovery_eval_gate.py  recovery_merge_build.py  recovery_round1_collect.py  recovery_shard_collect.py  release_chunk_transfer.py  renderer_equivalence.py  repair_pruned_sidecars.py  resume_equivalence_test.py  smolvla_teacher_smoke.py  verify_mps_rehearsal.py
tests/: test_canonical_dagger_twin.py  test_deployable_controller.py  test_integration_450m.py  test_interview_demo.py  test_truth_harness.py
tinyvla/: __init__.py  audit.py  benchmark.py  collect.py  dagger.py  dagger_loop.py  dashboard.py  dataset_viewer.py  demo.py  determinism.py  env.py  eval.py  eval_closedloop.py  fast_dataset.py  gates.py  interview_demo.py  live_demo.py  paths.py  recover.py  runtime.py  server.py  smolvla_loss.py  smolvla_pruned.py  task.py  train.py  trainability.py
(+12 files in other folders)
