[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyvla"
version = "0.1.0"
description = "Tiny SO-101 MuJoCo and SmolVLA training utilities."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "mujoco==3.9.0",
  "numpy==2.2.6",
  "imageio==2.37.3",
  "pillow==12.1.1",
  "safetensors==0.7.0",
  "torch==2.10.0",
  "torchvision==0.25.0",
]

[project.optional-dependencies]
lerobot = [
  "datasets==4.8.5",
  "lerobot[smolvla]==0.4.4",
  "pandas==2.3.3",
  "transformers==4.57.6",
]
test = ["pytest==8.4.2"]

[project.scripts]
tinyvla-benchmark = "tinyvla.benchmark:main"
tinyvla-audit = "tinyvla.audit:main"
tinyvla-collect = "tinyvla.collect:main"
tinyvla-dashboard = "tinyvla.dashboard:main"
tinyvla-dataset-viewer = "tinyvla.dataset_viewer:main"
tinyvla-eval = "tinyvla.eval:main"
tinyvla-gates = "tinyvla.gates:main"
tinyvla-serve = "tinyvla.server:main"
tinyvla-train = "tinyvla.train:main"

[tool.setuptools.packages.find]
include = ["tinyvla*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "heavy: loads the real 450M checkpoint; slow, skipped when weights are absent",
]
